<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="511dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <TextView
            android:id="@+id/Weight"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:background="#57FF76"
            android:paddingTop="20dp"
            android:text="@string/Weight"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/Blank"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/Measurement"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:background="#57FF76"
            android:paddingTop="20dp"
            android:text="@string/Measurement"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/Blank2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/Recipe"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:background="#57FF76"
            android:paddingTop="20dp"
            android:text="@string/Recipes"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>